# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my_workflow.yaml
page_analyzer/: __init__.py  app.py  config.py  database.py  parser.py  url_normalization.py
page_analyzer/templates/: index.html  url.html  urls.html
