[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add here"
redme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pytest-cov>=6.1.1",
	"pyyaml>=6.0.2",
	"flask",
	"phyton-dotenv", # библиотека не хранить секретные ключи в коде
	"gunicorn" # фласк для рендера
]

[build-system]
requires = ["hatchling"]
build-backend = "hatching.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
	"pytest>=8.3.5",
	"ruff>=0.11.8",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

