[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pytest-cov>=6.1.1",
	"pyyaml>=6.0.2",
	"flask",
	"python-dotenv",
	"gunicorn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
